<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/ll_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/please_input_server_domain"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_host"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:hint="https://tts.mzzsfy.eu.org/api/"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/light_gray" />

            <Button
                android:id="@+id/btn_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/please_input_text_to_speech"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="right|center"
            android:paddingEnd="10dp"
            android:text="@string/download_audio"

            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:src="@mipmap/iv_switch_close" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/nice_to_meet_you"
            android:padding="10dp"
            android:textColorHint="@color/light_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/clear" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>